apps/foo-bar/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: foo-app
  labels:
    app: foo
spec:
  selector:
    matchLabels:
      app: foo
  replicas: 1
  template:
    metadata:
      labels:
        app: foo
    spec:
      containers:
      - name: echo
        image: hashicorp/http-echo
        args:
        - "-text=foo"
        ports:
        - containerPort: 5678
          protocol: TCP
        resources:
          requests:
            cpu: 200m
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: bar-app
  labels:
    app: bar
spec:
  selector:
    matchLabels:
      app: bar
  replicas: 2
  template:
    metadata:
      labels:
        app: bar
    spec:
      containers:
      - name: echo
        image: hashicorp/http-echo
        args:
        - "-text=bar"
        ports:
        - containerPort: 5678
          protocol: TCP
        resources:
          requests:
            cpu: 200m
