apps/foo-bar/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foo-bar-ingress
  labels:
    app: foo-bar
  annotations:
    # konghq.com/host-aliases: "example.com,example.net"
    # konghq.com/methods: "GET,POST"
    # konghq.com/https-redirect-status-code: "301"
    konghq.com/plugins: rate-limiting
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /foo
        pathType: Prefix
        backend:
          service:
            name: foo-service
            port:
              number: 80
      - path: /bar
        pathType: Prefix
        backend:
          service:
            name: bar-service
            port:
              number: 80
